--- a/UI dev/Z-Project SCSS/sass/base/_typography.scss
+++ b/UI dev/Z-Project SCSS/sass/base/_typography.scss
@@ -31,3 +31,33 @@ body {
         margin-bottom: 6rem;
     }
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-image: linear-gradient(to right,$color-primary-light, $color-primary-dark);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    display: inline-block;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg);
+        text-shadow: 0.5rem 1px 2rem rgba($color-black, 0.2);
+    }
+}
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: $default-font-size;
+    
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
