--- a/UI dev/Z-Project SCSS/sass/components/_button.scss
+++ b/UI dev/Z-Project SCSS/sass/components/_button.scss
@@ -7,6 +7,7 @@
         border-radius: 10rem;
         transition: all .2s;
         position: relative;
+        font-size: $default-font-size;
     }
 
     &:hover {
@@ -40,7 +41,7 @@
     &--white {
         background-color: #fff;
         color: #777;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
 
         &::after {
             background-color: white;
@@ -50,5 +51,29 @@
     &--animated {
         animation: moveInBottom 1s ease-out .75s;
         animation-fill-mode: backwards;
+    }
+}
+
+.btn-text {
+    &:link, &:visited {
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 0.3rem;
+        font-size: $default-font-size;
+    }
+
+    &:hover {
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+        transform: translateY(-2px);
+        transition: all 0.2s;
+    }
+
+    &:active {
+        box-shadow: 0 0.5rem 2rem rgba($color-black, 0.15);
+        transform: translateY(0px);
     }
 }
